fix: 같은 예보를 두 번 매핑하면 ID가 달라져 중복 감지/캐싱이 불가능한 문제 수정