@@ -11,13 +11,15 @@ import com.gitggal.clothesplz.entity.weather.PrecipitationType;
 import com.gitggal.clothesplz.entity.weather.WindPhrase;
 import org.springframework.stereotype.Component;
 
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class WeatherMapper {
+    private static final double WIND_MODERATE_THRESHOLD = 4.0; // m/s, 기상청 기준
+    private static final double WIND_STRONG_THRESHOLD = 9.0;   // m/s, 기상청 기준
 
     // 일별 내부 DTO 목록을 API 계약용 WeatherDto 목록으로 변환한다.
     public List<WeatherDto> toWeatherDtoList(
@@ -28,7 +30,7 @@ public class WeatherMapper {
             int gridY) {
         return forecasts.stream()
                 .map(dto -> toWeatherDto(dto, latitude, longitude, gridX, gridY))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 하루 단위 요약 예보와 요청 위치 정보를 묶어 WeatherDto 한 건을 만든다.
@@ -38,8 +40,9 @@ public class WeatherMapper {
             double longitude,
             int gridX,
             int gridY) {
+        UUID weatherId = stableWeatherId(dto, gridX, gridY);
         return WeatherDto.builder()
-                .id(UUID.randomUUID())
+                .id(weatherId)
                 .forecastedAt(LocalDateTime.now())
                 .forecastAt(dto.getDate().atStartOfDay())
                 .skyStatus(dto.getSkyStatus())
@@ -86,12 +89,17 @@ public class WeatherMapper {
     }
 
     private WindPhrase toWindPhrase(Double speed) {
-        if (speed == null || speed < 4.0) {
+        if (speed == null || speed < WIND_MODERATE_THRESHOLD) {
             return WindPhrase.WEAK;
         }
-        if (speed < 9.0) {
+        if (speed < WIND_STRONG_THRESHOLD) {
             return WindPhrase.MODERATE;
         }
         return WindPhrase.STRONG;
+    }
+
+    private UUID stableWeatherId(DailyWeatherForecastDto dto, int gridX, int gridY) {
+        String identitySource = "%d:%d:%s".formatted(gridX, gridY, dto.getDate());
+        return UUID.nameUUIDFromBytes(identitySource.getBytes(StandardCharsets.UTF_8));
     }
 }
